--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>be.david</groupId>
     <artifactId>Servlets</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging> <!--web archive-->
+
 
     <build>
         <plugins>
@@ -19,6 +21,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -28,6 +34,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>3.1.0</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
