--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>1.1.7</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jsp-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
     </dependencies>
 
 
